--- a/src/components/Educacion/styles.css
+++ b/src/components/Educacion/styles.css
@@ -1,3 +1,44 @@
-.bg {
-    background-color: black;
+.edubox {
+    height: 100vh;
+    max-width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.edubox .educontainer {
+    background-color: #f7f7f7;
+    border-radius: 15px;
+    padding: 50px;
+    margin: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: calc(50% - 60px);
+    min-height: 40%;
+    align-items: center;
+    justify-content: center;
+}
+
+.edubox .educontainer .edutitle {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: #414141;
+    text-align: center;
+}
+
+.edubox .educontainer .edufecha {
+    font-size: 16px;
+    font-weight: normal;
+    margin-bottom: 15px;
+    color: #666666;
+    text-align: center;
+}
+
+.edubox .educontainer .edudesc {
+    font-size: 16px;
+    color: #333333;
+    text-align: center;
+    margin: auto;
 }
