--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -1,3 +1,9 @@
-.bg {
-    background-color: blueviolet;
+.proyectBox {
+    min-height: 100vh;
+    max-width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: stretch;
 }
