--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -6,4 +6,67 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: stretch;
+    padding: 20px;
+}
+
+.proyectCard {
+    background-color: #f7f7f7;
+    border-radius: 15px;
+    padding: 40px;
+    margin: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.proyectTitle {
+    background-image: url('#');
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    color: black;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.proyectDesc p {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 16px;
+    color: black;
+    text-decoration: solid;
+}
+
+.proyectDesc ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.proyectDesc ul li {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.proyectDesc a {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 16px;
+    color: #007bff;
+    text-decoration: none;
+}
+
+.proyectDesc a:hover {
+    text-decoration: underline;
 }
