--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: stretch;
+    align-items: center;
     padding: 20px;
 }
 
@@ -16,13 +16,21 @@
     margin: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
+    max-height: 450px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+#A {
+    background-image: url('../../assets/img/viveYSueltaReact.PNG');
+}
+
+#B {
+    background-image: url('../../assets/img/viveYSueltaFull.PNG');
 }
 
 .proyectTitle {
-    background-image: url('#');
     background-size: cover;
     background-position: center;
     border-radius: 10px;
@@ -35,7 +43,6 @@
 .proyectDesc p {
     display: block;
     text-align: center;
-    margin-top: 20px;
     font-size: 16px;
     color: black;
     text-decoration: solid;
