--- a/src/components/Skills/Skillex/styles.css
+++ b/src/components/Skills/Skillex/styles.css
@@ -4,7 +4,7 @@
     align-items: center;
     text-align: center;
     padding: 5px;
-    border-radius: 10%;
+    border-radius: 10px;
     max-width: 200px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
