--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -4,6 +4,35 @@
     margin: 0;
     width: 100%;
     flex-direction: column;
+
+    @media (max-width: 768px) {
+        display: none;
+    }
+
+    &.open {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background-color: black;
+    }
+}
+
+.menu-icon {
+    display: none;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+
+    @media (max-width: 768px) {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+    }
 }
 
 .li {
@@ -24,9 +53,13 @@
 }
 
 .iconNav {
-    border-radius: 50%;
+    border-radius: 10px;
     width: 170px;
     height: auto;
     margin: 50px;
+
+    @media (max-width: 768px) {
+        display: none;
+    }
 }
 
