--- a/src/components/Educacion/styles.css
+++ b/src/components/Educacion/styles.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: stretch;
+    align-items: center;
 }
 
 .edubox .educontainer {
