--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -5,29 +5,23 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     padding: 20px;
+    align-content: center;
 }
 
 .proyectCard {
     background-color: #f7f7f7;
     border-radius: 15px;
     padding: 40px;
-    margin: 20px;
+    margin: 10px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
-    max-height: 500px;
+    width: 80%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-
-#A {
-    background-image: url('../../assets/img/viveYSueltaReact.PNG');
-}
-
-#B {
-    background-image: url('../../assets/img/viveYSueltaFull.PNG');
 }
 
 .proyectTitle {
@@ -52,7 +46,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -63,6 +57,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1 1 45%;
+    max-width: 45%;
+    box-sizing: border-box;
 }
 
 .proyectDesc a {
@@ -76,4 +73,36 @@
 
 .proyectDesc a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .proyectBox {
+        justify-content: center;
+    }
+
+    .proyectCard {
+        max-width: 100%;
+        margin: 10px;
+        padding: 20px;
+    }
+
+    .proyectDesc ul li {
+        flex: 1 1 45%;
+        max-width: 45%;
+    }
+}
+
+@media (max-width: 480px) {
+    .proyectDesc ul li {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+}
+
+#A {
+    background-image: url('../../assets/img/viveYSueltaReact.PNG');
+}
+
+#B {
+    background-image: url('../../assets/img/viveYSueltaFull.PNG');
 }
