--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -32,6 +32,11 @@
     text-align: center;
     padding: 20px;
     margin-bottom: 20px;
+    text-shadow: 
+        -1px -1px 0 #ffffff,  
+        1px -1px 0 #ffffff,
+        -1px 1px 0 #ffffff,
+        1px 1px 0 #ffffff;
 }
 
 .proyectDesc p {
