--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -111,3 +111,7 @@
 #B {
     background-image: url('../../assets/img/viveYSueltaFull.PNG');
 }
+
+#C {
+    background-image: url('../../assets/img/spellList.PNG');
+}
