--- a/src/components/Proyects/styles.css
+++ b/src/components/Proyects/styles.css
@@ -14,7 +14,7 @@
     background-color: #f7f7f7;
     border-radius: 15px;
     padding: 40px;
-    margin: 10px 0;
+    margin: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     width: 80%;
@@ -30,8 +30,10 @@
     border-radius: 10px;
     color: black;
     text-align: center;
+    align-content: center;
     padding: 20px;
     margin-bottom: 20px;
+    min-height: 150px;
     text-shadow: 
         -1px -1px 0 #ffffff,  
         1px -1px 0 #ffffff,
